--- a/signup.html
+++ b/signup.html
@@ -7,6 +7,7 @@
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="/styles/main.css">
+        
     </head>
     <body>
         <section class="main-section">
@@ -16,21 +17,22 @@
                     <p>Lorem ipsum dolor sit amet consectetur Lorem ipsum dolor sit, amet consectetur adipisicing elit. Consectetur qui unde sint aut obcaecati magni minus sed itaque, culpa odit. adipisicing elit. Nihil voluptate ullam perspiciatis.<br><br>  Libero totam voluptatem quisquam et commodi, tempore, vitae quos repellendus consectetur nesciunt placeat sed vel amet voluptatum sit?</p>
                     <form>
                         <div class="insertName">
-                            <label for="">First Name: </label>
+                            <label for="">First and Last Name: </label>
                             <input type="text">
-                            <label for="">Last Name: </label>
+                            <label for="">Preferred Username: </label>
                             <input type="text">
                         </div>
-                        <div class="emailDOB">
-                            <label for="">Email: </label>
+                        <div class="passwordDOB">
+                            <label for="">Password: </label>
                             <input type="email">
                             <label for="">Date of Birth: </label>
                             <input type="date">
                         </div>
                     </form> 
-                    <div class="sign-up-form">Sign Up!</div>
+                    <a href="#" class="signUp" onclick="hello()">Sign Up!</a>
                 </div>
             </div>
         </section>
     </body>
+    <script src="./js/main.js"></script>
 </html>
